--- a/index.html
+++ b/index.html
@@ -2,9 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Rock | Paper | Scissors</title>
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
-
+    <header>Rock | Paper | Scissors</header>
+    <div class="container">
+        <div class="score-board">
+            <div id="user-label">USER</div>
+            <div id="comp-label">COMPUTER</div>
+            <span id="user-score">0</span>:<span id="comp-score">0</span>
+        </div>
+        <div id="message"> This is a message</div>
+        <div class="play-buttons">
+            <div id="rock"><img src="images/Rock.png" alt="Rock"></div>
+            <div id="paper"><img src="images/Paper.png" alt="Paper"></div>
+            <div id="scissors"><img src="images/Scissors.png" alt="Scissors"></div>
+        </div>
+    </div>
+    <script src="app.js"    ></script>
 </body>
 </html>
