Added final touches

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <header>Rock | Paper | Scissors</header>
     <div class="container">
         <div class="score-board">
-            <div id="user-label">USER</div>
-            <div id="comp-label">COMPUTER</div>
+            <div id="user-label" class="label">USER</div>
+            <div id="comp-label" class="label">COMPUTER</div>
             <span id="user-score">0</span>:<span id="comp-score">0</span>
         </div>
         <div id="message"> This is a message</div>
@@ -19,6 +19,7 @@
             <div id="paper"><img src="images/Paper.png" alt="Paper"></div>
             <div id="scissors"><img src="images/Scissors.png" alt="Scissors"></div>
         </div>
+        <button id="reset" onclick="reset()">RESET</button>
     </div>
     <script src="app.js"    ></script>
 </body>
