--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@
             <div id="comp-label" class="label">COMPUTER</div>
             <span id="user-score">0</span>:<span id="comp-score">0</span>
         </div>
-        <div id="message"> This is a message</div>
+        <div id="message">Welcome to Rock Paper Scissors!</div>
         <div class="play-buttons">
             <div id="rock"><img src="images/Rock.png" alt="Rock"></div>
             <div id="paper"><img src="images/Paper.png" alt="Paper"></div>
             <div id="scissors"><img src="images/Scissors.png" alt="Scissors"></div>
         </div>
-        <button id="reset" onclick="reset()">RESET</button>
+        <button id="reset" class="btn" onclick="reset()">RESET</button>
+        <button id="getChoice" class="btn hide" onclick="getChoice()">Click Me</button>
     </div>
-    <script src="app.js"    ></script>
+    <script src="app.js"></script>
 </body>
 </html>
